--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,28 @@
-<h1>Post#new</h1>
-<p>Find me in app/views/post/new.html.erb</p>
+<h1>New Post</h1>
+
+<div class="row">
+  <div class="col-md-3">
+  <p>Guidelines for posts</p>
+  <ul>
+    <li>Make sure that it rhymes.</li>
+    <li>Don't use the letter "A".</li>
+    <li>No hashtags allowed</li>
+  </ul>
+</div>
+
+<div class="col-md-9">
+  <%= form_for @post do |f| %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :body %>
+    <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+  </div>
+  <div class="form-group">
+    <%= f.submit "Save", class: 'btn btn-success' %>
+  </div>
+<% end %>
+</div>
+</div>
