Implemented Pundit and basic roles, updated home page user detection for buttons

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,4 +2,6 @@
 
 <p><%= @post.body %></p>
 
-<%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
+<% if policy(@post).edit? %>
+  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
+<% end %>
