--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,12 @@
   <h1>Bloccit</h1>
   <p>Bloccit is a resource for sharing links with your friends!</p>
   <p>
-    <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-    <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+    <% if current_user %>
+      <p>Welcome back to Bloccit!<p>
+    <% else %>
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+    <% end %> 
   </p>
 </div>
 
